latest dom manipulation with the movie db api

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- .container is main centered wrapper -->
-    <div class="container">
+    <div class="container movie-list">
       <h1>The Movie DB API Test</h1>
     </div>
 
