latest css buggy

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,15 @@
     <title>The Movie DB API Test</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- .container is main centered wrapper -->
     <div class="container movie-list">
       <h1>The Movie DB API Test</h1>
+      <div class="row">
+
+      </div>
     </div>
 
     <script
